--- a/templates/lesson-page.phtml
+++ b/templates/lesson-page.phtml
@@ -12,7 +12,7 @@
 </head>
 <body class="page-lesson">
 
-    <a href="/lessons" class="btn-glass back-to-lessons-fixed"><i class="fas fa-arrow-left" aria-hidden="true"></i> Retour aux leçons</a>
+    <a href="/lessons" class="btn-glass back-button"><i class="fas fa-arrow-left" aria-hidden="true"></i> Retour aux leçons</a>
 
     <?php
     $difficulty_class = '';
