--- a/templates/challenges.phtml
+++ b/templates/challenges.phtml
@@ -66,7 +66,33 @@
     <?php require __DIR__ . '/partials/footer.phtml'; ?>
     
     <script src="/js/header.js" defer></script>
+    <script src="/js/search.js" defer></script> 
     <script src="/js/progress-tracker.js" defer></script>
+    
+    <script src="/js/modal.js"></script>
+    <?php include 'templates/partials/modal.phtml'; ?>
+    <?php
+    if (session_status() === PHP_SESSION_NONE) {
+        session_start();
+    }
 
+    $flash_message = null;
+    if (isset($_SESSION['flash_message'])) {
+        $flash_message = $_SESSION['flash_message'];
+        unset($_SESSION['flash_message']);
+    }
+
+    if ($flash_message):
+    ?>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            modal.showModal(
+                '<?= htmlspecialchars($flash_message['type']) ?>',
+                '<?= htmlspecialchars($flash_message['title']) ?>',
+                '<?= htmlspecialchars($flash_message['message']) ?>'
+            );
+        });
+    </script>
+    <?php endif; ?>
 </body>
 </html>
