--- a/templates/forgot-password.phtml
+++ b/templates/forgot-password.phtml
@@ -29,8 +29,8 @@ if (session_status() === PHP_SESSION_NONE) {
         </div>
     </div>
 
+    <?php require __DIR__ . '/partials/modal.phtml';?>
     <script src="/js/modal.js"></script>
-    <?php include __DIR__ . '/partials/modal.phtml'; ?>
     <?php
     $flash_message = null;
     if (isset($_SESSION['flash_message'])) {
