--- a/templates/lesson-page.phtml
+++ b/templates/lesson-page.phtml
@@ -75,11 +75,8 @@
         </div>
     </main>
 
-    <?php
-        require ROOT_PATH . '/templates/partials/modal.phtml';
-    ?>
-
-    <script src="/js/modal.js" defer></script>
+    <?php require __DIR__ . '/partials/modal.phtml';?>
+    <script src="/js/modal.js"></script>
     <script src="/js/lesson-page.js" defer></script>
 </body>
 </html>
