--- a/templates/reset-password.phtml
+++ b/templates/reset-password.phtml
@@ -31,8 +31,9 @@ $token = $_GET['token'] ?? '';
         </div>
     </div>
 
+    <?php require __DIR__ . '/partials/modal.phtml';?>
     <script src="/js/modal.js"></script>
-    <?php include __DIR__ . '/partials/modal.phtml'; ?>
+
     <?php
     $flash_message = null;
     if (isset($_SESSION['flash_message'])) {
