--- a/templates/challenges.phtml
+++ b/templates/challenges.phtml
@@ -68,9 +68,9 @@
     <script src="/js/header.js" defer></script>
     <script src="/js/search.js" defer></script> 
     <script src="/js/progress-tracker.js" defer></script>
-    
-    <script src="/js/modal.js"></script>
-    <?php include 'templates/partials/modal.phtml'; ?>
+
+    <?php require __DIR__ . '/partials/modal.phtml';?>
+    <script src="/js/modal.js" defer></script>
     <?php
     if (session_status() === PHP_SESSION_NONE) {
         session_start();
