--- a/templates/forgot-password.phtml
+++ b/templates/forgot-password.phtml
@@ -11,6 +11,7 @@ if (session_status() === PHP_SESSION_NONE) {
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/auth.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
+    <link rel="icon" type="image/png" href="/images/logo_krhacken_r.ico" />
 </head>
 <body class="auth-page">
 
