--- a/templates/reset-password.phtml
+++ b/templates/reset-password.phtml
@@ -12,6 +12,7 @@ $token = $_GET['token'] ?? '';
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/auth.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
+    <link rel="icon" type="image/png" href="/images/logo_krhacken_r.ico" />
 </head>
 <body class="auth-page">
 
