--- a/templates/partials/header.phtml
+++ b/templates/partials/header.phtml
@@ -116,3 +116,6 @@
 <div class="no-results" id="no-results-message" style="display:none;">
     <p>Aucun résultat trouvé pour cette recherche.</p>
 </div>
+
+<script src="/js/header.js" defer></script>
+<script src="/js/search.js" defer></script> 
