--- a/public/css/content-page.css
+++ b/public/css/content-page.css
@@ -298,7 +298,7 @@ pre {
 code {
   background-color: rgba(146, 22, 168, 0.15);
   color: #d1aaff;                             
-  padding: 0.1rem 0.2rem;                      
+  padding: 1px 0.2rem;                      
   border-radius: 6px;                          
   font-family: 'Fira Code', monospace; 
   font-size: 0.9rem;                            
