--- a/templates/login.phtml
+++ b/templates/login.phtml
@@ -23,7 +23,7 @@ if (session_status() === PHP_SESSION_NONE) {
             <h2 class="page-title">Connexion</h2>
 
             <form action="/login" method="post" class="auth-form">
-                <input type="hidden" name="redirect_to" value="<?= htmlspecialchars($_GET['redirect_to'] ?? '') ?>">
+                <input type="hidden" name="redirect_to" value="<?= htmlspecialchars($_GET['redirect_to'] ?? '/') ?>">
                 <input type="text" name="username" placeholder="Nom d'utilisateur ou E-mail" required>
                 <input type="password" name="password" placeholder="Mot de passe" required>
                 <button type="submit" class="btn-glass">Se connecter <i class="fas fa-arrow-right" aria-hidden="true"></i></button>
